[package]
name = "gcnd"
description = "Google Calendar Notification Daemon"
authors = ["Atri Hegde <atri@hegdeatri.com"]
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://github.com/hegde-atri/gcal_notifs"
repository = "https://github.com/hegde-atri/gcal_notifs"
keywords = ["google calendar", "notification", "utility"]
categories = ["daemon"]
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
daemonize = "0.5.0"
notify-rust = "4.9.0"
rodio = "0.17.1"
